fix: align footer email input arrow button

--- a/style.css
+++ b/style.css
@@ -1931,10 +1931,13 @@ transform:scale(1.01);
     padding-left: 1.5rem;
     padding-right: .3rem;
     display: flex;
+    align-items: center;
 }
 
 .input-container a {
     background-color: var(--golden-hour);
+    width: 2.1rem;
+    line-height: 2.1rem;
 }
 
 .input-container input[type="email"] {
